--- a/symfony/.env
+++ b/symfony/.env
@@ -14,8 +14,8 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=prod
-APP_SECRET=4c5752c07b9d9433f274192bf0f485a1
+APP_ENV=dev
+APP_SECRET=a46b7dc941d5321cd8b96c151fafb72b
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
 ###< symfony/framework-bundle ###
