--- a/symfony/config/services.yaml
+++ b/symfony/config/services.yaml
@@ -14,15 +14,19 @@ services:
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
-        resource: '../src/*'
-        exclude: '../src/{DependencyInjection,Entity,Migrations,Tests,Kernel.php}'
+        resource: '../src/'
+        exclude:
+            - '../src/DependencyInjection/'
+            - '../src/Entity/'
+            - '../src/Kernel.php'
+            - '../src/Tests/'
+            - '../src/Migrations/'
 
-    # controllers are imported separately to make sure services can be injected
+    # controllers are imported separately to make sure services can be injectedcd va
     # as action arguments even if you don't extend any base controller class
     App\Controller\:
-        resource: '../src/Controller'
+        resource: '../src/Controller/'
         tags: ['controller.service_arguments']
-
     app.menu_builder:
         class: App\Menu\MenuBuilder
         arguments: ["@knp_menu.factory"]
@@ -30,7 +34,5 @@ services:
             - { name: knp_menu.menu_builder, method: createMainAdminMenu, alias: admin_main } # The alias is what is used to retrieve the menu    
             
     App\Naming\OriginalNamer:
-         public: true            
-
-    # add more service definitions when explicit configuration is needed
+         public: true      # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
